--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,49 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+.navbar-fixed-top {
+  margin-bottom: !important 0px;
 }
+.container {
+  margin-top: 60px;
+  width: 100%;
+}
+.artist-thumbnail {
+  width: 150px;
+  height: auto;
+  float: left;
+  position: relative;
+  margin-right: 20px;
+}
+.main{
+    border-bottom:#333 1px solid;
+    padding: 30px;
+}
+
+.artist-header{
+    padding-bottom:20px;
+    margin-bottom:20px;
+    border-bottom:solid 1px #333;
+}
+
+.artist-thumb{
+    width:80px;
+    height:auto;
+    float:left;
+    margin-right:10px;
+}
+
+.artist-albums .well{
+    margin-bottom:20px;
+    overflow:auto;
+    min-height: 400px;
+}
+
+.album{
+    text-align:center;
+    background:#333;
+    padding: 10px 20px;
+    border: #666 1px solid;
+}
+
+.album-thumbnail{
+    width:100%;
+}
+
